tests/errors/err04_division_por_cero.ml
// Error 04: Division por cero
x = 10;
y = x / 0;
print(y);
